--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
+body{
+    background-color: 	rgb(219, 217, 217);
+    font-family: 'Roboto', sans-serif;
+}
