--- a/src/app/view/main/dashboard/dashboard.component.html
+++ b/src/app/view/main/dashboard/dashboard.component.html
@@ -47,7 +47,7 @@
     <div class="col-sm my-3 p-3 bg-white rounded shadow-sm boxesL">
         <div class="row">
             <h5 class="col-8">Likes</h5>
-            <a class="btn btn-default col p-0" data-toggle="collapse" data-target="#demo">
+            <a class="btn btn-default col p-0" data-toggle="collapse" data-target="#likesI">
                 <h5>
                     <i class="fas fa-info-circle col p-0"></i>
                 </h5>
@@ -57,7 +57,7 @@
             </h5>
         </div>
         <hr>
-        <h2 class="mt-3 mb-2">{{likesF}}</h2>
+        <h2 class="mt-3 mb-2">{{Rtotal[0]}}</h2>
         <!--<h4 class="text-success ml-2">
             <i class="fas fa-long-arrow-alt-up mr-2"></i>{{likesI}}</h4>-->
     </div>
@@ -283,7 +283,14 @@
         <div class="col-md">
             <h5 class="col-9 pt-3">Likes</h5>
             <hr>
-                <!-- TERMINAR -->
+            <ul>
+                <li><i class="fas fa-thumbs-up fa-2x"></i>: {{Rtotal[0]}}</li>
+                <li>Love: {{Rtotal[1]}}</li>
+                <li>WoW: {{Rtotal[2]}}</li>
+                <li>HaHa: {{Rtotal[3]}}</li>
+                <li>Sad: {{Rtotal[4]}}</li>
+                <li>Anger: {{Rtotal[5]}}</li>
+            </ul>
         </div>
     </div>
 </div>
