--- a/src/app/view/main/dashboard/dashboard.component.html
+++ b/src/app/view/main/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
         <h2 class="mt-3 mb-2">{{ fansF }}</h2>
         <h4 class="ml-2">
             <span class="text-success" *ngIf="this.fansI > 0"><i class="fas fa-long-arrow-alt-up mr-2"></i>{{fansI}}</span>
-            <span class="text-danger" *ngIf="this.fansI < 0" ><i class="fas fa-long-arrow-alt-down mr-2 text-danger"></i>{{fansI}}</span>
+            <span class="text-danger" *ngIf="this.fansI < 0"><i class="fas fa-long-arrow-alt-down mr-2 text-danger"></i>{{fansI}}</span>
         </h4>
     </div>
     <div class="col-sm my-3 p-3 bg-white rounded shadow-sm boxesL">
@@ -73,23 +73,25 @@
         <hr>
         <h2 class="mt-3 mb-2">{{sac}}</h2>
         <h4 class="ml-2">
-            <span class="text-success" *ngIf="this.sacD > 0" > <i class="fas fa-long-arrow-alt-up mr-2"></i>{{sacD}} </span>
-            <span class="text-danger" *ngIf="this.sacD < 0" > <i class="fas fa-long-arrow-alt-down mr-2 text-danger"></i>{{sacD}} </span>
+            <span class="text-success" *ngIf="this.sacD > 0"> <i class="fas fa-long-arrow-alt-up mr-2"></i>{{sacD}}
+            </span>
+            <span class="text-danger" *ngIf="this.sacD < 0"> <i class="fas fa-long-arrow-alt-down mr-2 text-danger"></i>{{sacD}}
+            </span>
         </h4>
     </div>
 </div>
 <div id="seguidoresI" class="collapse bg-white rounded shadow-sm">
-    
+
     <div class="row">
         <h5 class="col-9 ml-3 pt-3">Dados</h5>
     </div>
 
     <hr>
-    
+
     <div class="row">
         <div class="col-lg-5 m-auto " style="width:40%">
-           <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)"></canvas>
+            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"
+                (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
         </div>
         <div class="col-lg-6 ">
             <table class="table table-striped table-hover">
@@ -151,124 +153,69 @@
 <div id="alcanceI" class="collapse bg-white rounded shadow-sm mb-5">
 
     <div class="row">
-
         <div class="col-md">
-            <h5 class="col-9 pt-3">Principais Posts (Estáticos)</h5>
+            <h5 class="col-9 pt-3">Posts (Vídeo)</h5>
             <hr>
-            <table class="table table-striped table-hover mx-auto">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Post</th>
-                        <th scope="col">Série</th>
-                        <th scope="col">Pessoas Alcançadas</th>
-                        <th scope="col">Cliques</th>
-                        <th scope="col">Reações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Tênis Nike</td>
-                        <td>Promoção Extra</td>
-                        <td>24.179</td>
-                        <td>149</td>
-                        <td>1.512</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>São João</td>
-                        <td>Campanha</td>
-                        <td>18.234</td>
-                        <td>109</td>
-                        <td>2.307</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Grendene Kids Moranguinho</td>
-                        <td>Produto</td>
-                        <td>16.729</td>
-                        <td>191</td>
-                        <td>1.378</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>Adidas Top Replique</td>
-                        <td>Bola da Copa</td>
-                        <td>14.909</td>
-                        <td>58</td>
-                        <td>85</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">5</th>
-                        <td>Adidas Top Glider</td>
-                        <td>Bola da Copa</td>
-                        <td>10.919</td>
-                        <td>20</td>
-                        <td>149</td>
-                    </tr>
-                </tbody>
+            <table mat-table [dataSource]="dataSourceV" multiTemplateDataRows class="">
+                <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+                    <th mat-header-cell *matHeaderCellDef> <strong> {{column}}</strong> </th>
+                    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+                </ng-container>
+
+                <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+                <ng-container matColumnDef="expandedDetail">
+                    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+                        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                            <div class="example-element-description row">
+                                <img src="{{element.picture}}" alt="" class="img-fluid col-4">
+                                <p class="col">{{element.description}}</p>
+
+                                <a target="_blank" rel="noopener noreferrer" class="text-primary mt-3" href="{{element.link}}">{{element.link}}</a>
+                            </div>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+                <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+                    [class.example-expanded-row]="expandedElement === element" (click)="expandedElement = element">
+                </tr>
+                <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
             </table>
         </div>
-
         <div class="col-md">
-            <h5 class="col-9 pt-3">Principais Posts (Vídeo)</h5>
+            <h5 class="col-9 pt-3">Posts (Estatístico)</h5>
             <hr>
-            <table class="table table-striped table-hover mx-auto">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Post</th>
-                        <th scope="col">Série</th>
-                        <th scope="col">Pessoas Alcançadas</th>
-                        <th scope="col">Visualizações</th>
-                        <th scope="col">Reações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>São João Espesende</td>
-                        <td>Campanha</td>
-                        <td>126.712</td>
-                        <td>28.014</td>
-                        <td>290</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Top 3 de São João</td>
-                        <td>Pisando Por Aí</td>
-                        <td>107.832</td>
-                        <td>24.112</td>
-                        <td>290</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>São João</td>
-                        <td>Pisando Por Aí(Teaser)</td>
-                        <td>103.866</td>
-                        <td>24.949</td>
-                        <td>782</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>Luziete e José Antonio</td>
-                        <td>Amar Faz Toda a Diferença</td>
-                        <td>103.798</td>
-                        <td>19.570</td>
-                        <td>347</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">5</th>
-                        <td>São João</td>
-                        <td>Vá por mim </td>
-                        <td>102.588</td>
-                        <td>30.309</td>
-                        <td>909</td>
-                    </tr>
-                </tbody>
+            <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="">
+                <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+                    <th mat-header-cell *matHeaderCellDef> <strong> {{column}}</strong> </th>
+                    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+                </ng-container>
+
+                <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+                <ng-container matColumnDef="expandedDetail">
+                    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+                        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                            <div class="example-element-description row">
+                                <img src="{{element.picture}}" alt="" class="img-fluid col-4">
+                                <p class="col">{{element.description}}</p>
+
+                                <a target="_blank" rel="noopener noreferrer" class="text-primary mt-3" href="{{element.link}}">{{element.link}}</a>
+                            </div>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+                <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+                    [class.example-expanded-row]="expandedElement === element" (click)="expandedElement = element">
+                </tr>
+                <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
             </table>
+
         </div>
+
+
     </div>
 </div>
 <div id="likesI" class="collapse bg-white rounded shadow-sm mb-5">
@@ -280,27 +227,26 @@
             <hr>
             <ul class="list-inline row mx-auto mt-3">
                 <li class="list-inline-item col mr-2"><i class="far fa-thumbs-up fa-2x mr-2"></i>
-                     : {{Rtotal[0]}}
-                    </li>
+                    <h4> : {{Rtotal[0]}}</h4>
+                </li>
                 <li class="list-inline-item col"><i class="far fa-heart fa-2x mr-2"></i>
-                     : {{Rtotal[1]}}
-                    </li>
+                    <h4> : {{Rtotal[1]}} </h4>
+                </li>
                 <li class="list-inline-item col"><i class="far fa-surprise fa-2x mr-2"></i>
-                      : {{Rtotal[2]}}
-                    </li>
+                    <h4> : {{Rtotal[2]}} </h4>
+                </li>
                 <li class="list-inline-item col"><i class="far fa-grin-squint-tears fa-2x mr-2"></i>
-                     : {{Rtotal[3]}}
-                    </li>
+                    <h4> : {{Rtotal[3]}} </h4>
+                </li>
                 <li class="list-inline-item col"><i class="far fa-sad-tear fa-2x mr-2"></i>
-                     : {{Rtotal[4]}}
-                    </li>
+                    <h4> : {{Rtotal[4]}} </h4>
+                </li>
                 <li class="list-inline-item col"><i class="far fa-angry fa-2x mr-2"></i>
-                     :  {{Rtotal[5]}}
-                    </li>
+                    <h4> : {{Rtotal[5]}} </h4>
+                </li>
             </ul>
         </div>
     </div>
 </div>
 
 <button type="button" class="btn btn-primary" (click)="testee()">Get Request</button>
-
