--- a/src/app/view/main/dashboard/dashboard.component.html
+++ b/src/app/view/main/dashboard/dashboard.component.html
@@ -152,7 +152,7 @@
             <hr>
             <table mat-table [dataSource]="dataSourceV" multiTemplateDataRows class="">
                 <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-                    <th mat-header-cell *matHeaderCellDef > <strong> {{column}}</strong> </th>
+                    <th mat-header-cell *matHeaderCellDef> <strong> {{column}}</strong> </th>
                     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
                 </ng-container>
 
@@ -163,11 +163,12 @@
                             <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                                 <div class="example-element-description row">
                                     <div class="col-4">
-                                        <img src="{{element.picture}}" alt="" class="rounded img-fluid">
+                                        <img src="{{element.picture}}" alt="" class="rounded img-fluid ">
                                     </div>
                                     <div class="col">
                                         <p class="text-justify">{{element.description}}</p>
                                     </div>
+
                                     <div class="col-2">
                                         <a target="_blank" rel="noopener noreferrer" class="btn btn-outline-info my-2 my-sm-0"
                                             href="{{element.link}}" role="button">Link</a>
@@ -200,13 +201,13 @@
                         <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                             <div class="example-element-description row">
                                 <div class="col-4">
-                                    <img src="{{element.picture}}" alt="" class="rounded img-fluid">
+                                    <img src="{{element.picture}}" alt="" class="rounded img-fluid mat-elevation-z8s">
                                 </div>
                                 <div class="col">
                                     <p class="text-justify">{{element.description}}</p>
                                 </div>
                                 <div class="col-2">
-                                    <a target="_blank" rel="noopener noreferrer" class="btn btn-outline-info my-2 my-sm-0"
+                                    <a target="_blank" rel="noopener noreferrer" class="btn btn-outline-info my-2 my-sm-0 "
                                         href="{{element.link}}" role="button">Link</a>
                                 </div>
                             </div>
