--- a/src/app/view/main/filters/filters.component.html
+++ b/src/app/view/main/filters/filters.component.html
@@ -29,44 +29,48 @@
     <div class="col-sm-2 formasL mt-2">
 
         <button class="btn btn-secondary" data-toggle="collapse" data-target="#dateI">Range Principal</button>
-
+        
     </div>
     <div id="dateI" class="col-sm-2 formasL mt-2 collapse bg-white rounded shadow-sm ">
 
-            <mat-form-field class="ml-1 mt-2">
-                <input matInput [matDatepicker]="picker" placeholder="De">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
+        <mat-form-field class="ml-1 mt-2">
+            <input matInput [matDatepicker]="picker" placeholder="De" [(ngModel)]="selectedDate1" readonly>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
 
-            <mat-form-field class="ml-1">
-                <input matInput [matDatepicker]="picker4" placeholder="Até">
-                <mat-datepicker-toggle matSuffix [for]="picker4"></mat-datepicker-toggle>
-                <mat-datepicker #picker4></mat-datepicker>
-            </mat-form-field>
+        <mat-form-field class="ml-1">
+            <input matInput  [matDatepicker]="picker4" placeholder="Até" [(ngModel)]="selectedDate2" readonly>
+            <mat-datepicker-toggle matSuffix [for]="picker4"></mat-datepicker-toggle>
+            <mat-datepicker #picker4></mat-datepicker>
+        </mat-form-field>
 
-        </div>
+    </div>
     <div class="col-sm-2 formasL mt-2">
 
         <button class="btn btn-secondary" data-toggle="collapse" data-target="#dateR">Range Comparação</button>
 
-    
+
     </div>
     <div id="dateR" class="col-sm-2 formasL mt-2 collapse bg-white rounded shadow-sm ">
 
-            <mat-form-field class="ml-1 mt-2">
-                <input matInput [matDatepicker]="picker1" placeholder="De">
-                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                <mat-datepicker #picker1></mat-datepicker>
-            </mat-form-field>
+        <mat-form-field class="ml-1 mt-2">
+            <input matInput [matDatepicker]="picker1" placeholder="De" [(ngModel)]="selectedDate3" readonly>
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+        </mat-form-field>
 
-            <mat-form-field class="ml-1">
-                <input matInput [matDatepicker]="picker2" placeholder="Até">
-                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2></mat-datepicker>
-            </mat-form-field>
+        <mat-form-field class="ml-1">
+            <input matInput [matDatepicker]="picker2" [(ngModel)]="selectedDate4" placeholder="Até">
+            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+            <mat-datepicker #picker2></mat-datepicker>
+        </mat-form-field>
 
-        </div>
+    </div>
+    <div class="col-sm-2 formasL mt-2">
 
+        <button type="button" class="btn btn-primary" (click)="sendFilters()">Get Request</button>
+
+    </div>
 
 </div>
