--- a/src/app/view/main/dashboard/dashboard.component.html
+++ b/src/app/view/main/dashboard/dashboard.component.html
@@ -170,8 +170,10 @@
                                     </div>
 
                                     <div class="col-2">
-                                        <a target="_blank" rel="noopener noreferrer" class="btn btn-outline-info my-2 my-sm-0"
-                                            href="{{element.link}}" role="button">Link</a>
+                                        <a target="_blank" rel="noopener noreferrer" class="btn  my-2 mr-2 my-sm-0"
+                                            href="{{element.link}}" role="button"><i class="fab fa-facebook-square fa-2x"></i></a>
+                                        <a target="_blank" rel="noopener noreferrer" class="btn  my-2 mr-2 my-sm-2"
+                                            href="{{element.link}}" role="button"><i class="fas fa-info-circle fa-2x"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -207,8 +209,10 @@
                                     <p class="text-justify">{{element.description}}</p>
                                 </div>
                                 <div class="col-2">
-                                    <a target="_blank" rel="noopener noreferrer" class="btn btn-outline-info my-2 my-sm-0 "
-                                        href="{{element.link}}" role="button">Link</a>
+                                    <a target="_blank" rel="noopener noreferrer" class="btn mr-2 my-2 my-sm-0"
+                                        href="{{element.link}}" role="button"><i class="fab fa-facebook-square fa-2x"></i></a>
+                                    <a target="_blank" rel="noopener noreferrer" class="btn mr-2 my-2 my-sm-2"
+                                        href="{{element.link}}" role="button"><i class="fas fa-info-circle fa-2x"></i></a>
                                 </div>
                             </div>
                         </div>
