--- a/src/app/view/hud/nav-top/nav-top.component.html
+++ b/src/app/view/hud/nav-top/nav-top.component.html
@@ -14,6 +14,7 @@
       </ul>
       <form class="form-inline mt-2 mt-md-0">
           <a class="btn btn-outline-success my-2 my-sm-0" href="/login" role="button">{{login}}</a>
+          <p>{{name}}</p>
       </form>
   </div>
 </nav>
